fix:calendar overflow

--- a/src/assets/css/v2/calendar.less
+++ b/src/assets/css/v2/calendar.less
@@ -1,4 +1,5 @@
 .m-calendar {
+    overflow: hidden;
     box-shadow: 0 0 2px rgba(0,0,0,.08);
     // border: 1px solid rgba(63, 68, 72, 0.2);
     padding-top:10px;
